syntax = "proto3";

message YuinoWord {
  string surface = 1;
  string read = 2;
  uint32 vector = 3;
  uint32 pos = 4;
}

message YuinoPos {
  uint32 id = 1;
  uint32 vec = 2;
}

message YuinoDic {
  repeated YuinoWord words = 1;
  repeated YuinoPos poss = 2;
}
